# TestEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.cmake  Doxyfile
docs/architecture/: architecture.txt
docs/mermaid/: architecture.md  init_sequence.md
docs/pages/: mainpage.dox  memory-system.dox
engine/: CMakeLists.txt  CMakeLists.txt.cmake  build.bat
engine/src/: defines.hpp  entry.hpp  game_interface.hpp  return_codes.hpp
engine/src/containers/: darray.cpp  darray.hpp
engine/src/core/: application.cpp  application.hpp  asserts.hpp  event.cpp  event.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  te_memory.cpp  te_memory.hpp
engine/src/platform/: platform.cpp  platform.hpp
testbed/: CMakeLists.txt  CMakeLists.txt.cmake  build.bat
testbed/src/: entry.cpp  game.cpp  game.hpp  main.cpp
