# =====================================================================
# ДВИЖОК НА C++17 + VULKAN (ПОЛНЫЙ КОНТРОЛЬ)
# Авторский путь: своё окно, своя математика, свои контейнеры
# =====================================================================

cmake_minimum_required(VERSION 3.20)

# ---------------------------------------------------------------------
# ПРОЕКТ: C++17, версия 1.0.0 - стабильная. 0.1.0 - разработка( + 0.0.1 при добавлении фичи) 
# ---------------------------------------------------------------------
project(TestEngine VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)           # C++17 — ваша золотая середина
set(CMAKE_CXX_STANDARD_REQUIRED ON)  # Не понижать стандарт
set(CMAKE_CXX_EXTENSIONS OFF)        # Без GNU расширений (-std=c++17, а не -std=gnu++17)

# ---------------------------------------------------------------------
# ОПЦИИ СБОРКИ (всё под мой контроль)
# ---------------------------------------------------------------------

# Сборка демо-приложения (тестовая площадка) — всегда нужна для тестов
option(BUILD_TESTBED "Собрать тестовую площадку" ON)

# Включить санитайзеры для охоты за памятью (используем по необходимости)
option(USE_SANITIZER "Включить AddressSanitizer и UndefinedBehaviorSanitizer" OFF)

# Подключать ли готовую физику Jolt? (На этапе 4)
option(USE_JOLT_PHYSICS "Подключить Jolt Physics Engine" OFF)

# Подключать ли звук SoLoud? (На этапе 4)
option(USE_SOLOUD "Подключить SoLoud Audio Engine" OFF)

# ENABLE_WERROR: Превращать предупреждения в ошибки?
#   OFF — (по умолчанию) для разработки: предупреждения не ломают сборку
#   ON  — для CI/CD, ночных сборок, релизов: любое предупреждение = ошибка
option(ENABLE_WERROR "Превращать предупреждения в ошибки (-Werror / /WX)" OFF)

# Дополнительная опция для особо педантичных
option(ENABLE_PEDANTIC "Включить -Wpedantic (максимальная строгость стандарта)" OFF)

# ---------------------------------------------------------------------
# ПУТИ
# ---------------------------------------------------------------------
set(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/external)  # Все готовые библиотеки тут
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")  #говорим чтобы он искал кастомные модули еще и в папке cmake, помимо CMAKE_MODULE_PATH

# ---------------------------------------------------------------------
# ТИП СБОРКИ (по умолчанию Debug)
# ---------------------------------------------------------------------
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Тип сборки..." FORCE)
endif()

# ---------------------------------------------------------------------
# ФЛАГИ КОМПИЛЯТОРА
# ---------------------------------------------------------------------

# Устанавливаем базовые флаги в зависимости от компилятора и конфигурации
if(MSVC)
    # Для MSVC
    set(CMAKE_CXX_FLAGS_DEBUG "/Od /Zi")
    set(CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
    # Дополнительные предупреждения
    add_compile_options(/W4 /wd4100 /utf-8)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    # Для Clang/GCC
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
    add_compile_options(
        -Wall -Wextra
        -Wno-unused-parameter
        -Werror=return-type
        -Werror=unused-result
        -fno-omit-frame-pointer
    )
endif()

# ---------------------------------------------------------------------
# ИНСТРУМЕНТЫ 
# ---------------------------------------------------------------------
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)  #Эта строчка заставляет CMake создать файл compile_commands.json в папке build/. 

# ---------------------------------------------------------------------
# ГОТОВЫЕ ЗАВИСИМОСТИ (ИХ НЕ ПИШЕМ, ПРОСТО ПОДКЛЮЧАЕМ) 
# ---------------------------------------------------------------------

# Vulkan SDK (предполагается, что он установлен в системе) 
find_package(Vulkan REQUIRED)
message(STATUS "✅ Vulkan найден: ${Vulkan_INCLUDE_DIRS}")

# Dear ImGui (подключаем как внешний проект)
# add_subdirectory(${EXTERNAL_DIR}/imgui)

# stb_image (просто добавляем пути, это header-only)
 add_library(stb_image INTERFACE)
 target_include_directories(stb_image INTERFACE ${EXTERNAL_DIR}/stb)

# tinyobjloader (если решим использовать его)
# add_subdirectory(${EXTERNAL_DIR}/tinyobjloader)

# Опционально: Jolt Physics
#if(USE_JOLT_PHYSICS)
    # add_subdirectory(${EXTERNAL_DIR}/jolt)
    # message(STATUS "⚙️ Jolt Physics подключена")
# endif()

# Опционально: SoLoud
# if(USE_SOLOUD)
   # add_subdirectory(${EXTERNAL_DIR}/soloud)
   # message(STATUS "🔊 SoLoud подключён")
# endif()


# ---------------------------------------------------------------------
# ПОДКЛЮЧЕНИЕ МОДУЛЕЙ (МОЯ АРХИТЕКТУРА, ПИШУ САМ)
# ---------------------------------------------------------------------

# 1. Ядро движка (ваша математика, контейнеры, Vulkan обёртки)
add_subdirectory(engine)

# 2. Песочница для тестов (если включена)
if(BUILD_TESTBED)
    add_subdirectory(testbed)
    message(STATUS "🕹️ Песочница будет собрана")
endif()


# ---------------------------------------------------------------------
# ОТЛАДОЧНЫЙ ВЫВОД
# ---------------------------------------------------------------------
message(STATUS "")
message(STATUS "🔥 Конфигурация TestEngine завершена:")
message(STATUS "   Версия:        ${PROJECT_VERSION}")
message(STATUS "   Компилятор:    ${CMAKE_CXX_COMPILER_ID}")
message(STATUS "   Стандарт:      C++${CMAKE_CXX_STANDARD}")
message(STATUS "   Тип сборки:    ${CMAKE_BUILD_TYPE}")
message(STATUS "   Платформа:     ${CMAKE_SYSTEM_NAME}")
message(STATUS "   Санитайзеры:   ${USE_SANITIZER}")
message(STATUS "   Внешние libs:  ${EXTERNAL_DIR}")
message(STATUS "")