# =====================================================================
# ДВИЖОК (ENGINE)
# =====================================================================
# Этот файл собирает ядро движка в статическую/динамическую библиотеку
# =====================================================================

project(Engine)

# ---------------------------------------------------------------------
# ФАЙЛЫ ИСХОДНОГО КОДА
# ---------------------------------------------------------------------

# все исходники 
file(GLOB_RECURSE ENGINE_SOURCES
    "src/*.hpp"
    "src/*.cpp"
)

# Проверка, что исходники найдены
if(NOT ENGINE_SOURCES)
    message(FATAL_ERROR "❌ Нет исходников в src/! Проверь пути.")
endif()

# ---------------------------------------------------------------------
# ДЕЛАЕМ ИЗ ЭТОГО ВСЕГО ЧТО? - БИБЛИОТЕКУ
# ---------------------------------------------------------------------
# (статическую или динамическую — зависит от BUILD_SHARED_LIBS)
# ---------------------------------------------------------------------

add_library(${PROJECT_NAME} 
    ${ENGINE_SOURCES}
)

# Группировка файлов в IDE (Visual Studio, Xcode) для удобной навигации
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" 
    FILES 
        ${ENGINE_SOURCES}
)

# ---------------------------------------------------------------------
# ПОДКЛЮЧАЕМ ЗАВИСИМОСТИ(ЛИНКОВКА)
# ---------------------------------------------------------------------
# (Линкуем внешние библиотеки, необходимые движку)
# ---------------------------------------------------------------------
# Подключаем внешние библиотеки из папки external/
# (пути к ним уже заданы в корневом CMake через EXTERNAL_DIR)
target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Vulkan::Vulkan          # Vulkan API
        stb_image                # Загрузка изображений (header-only)
    PRIVATE
        $<$<PLATFORM_ID:Windows>:user32 gdi32>
        $<$<PLATFORM_ID:Linux>:X11 xcb>
)

    
# ---------------------------------------------------------------------
# ПОДКЛЮЧАЕМ ПУТИ К ЗАГОЛОВКАМ 
# ---------------------------------------------------------------------

# Директории включений:
target_include_directories(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# ---------------------------------------------------------------------
# НАСТРОЙКИ КОМПИЛЯЦИИ
# ---------------------------------------------------------------------

# Явно указываем стандарт C++17 (наследуется из корневого, но дублируем для надёжности)
set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

# Определения препроцессора:
#   ENGINE_BUILD_DLL — нужно для экспорта символов в динамической библиотеке
target_compile_definitions(${PROJECT_NAME}
    PRIVATE
        $<$<BOOL:${BUILD_SHARED_LIBS}>:ENGINE_BUILD_DLL>
)

#определение ENGINE_SHARED
if(BUILD_SHARED_LIBS)
    target_compile_definitions(${PROJECT_NAME} PUBLIC ENGINE_SHARED)
endif()

# ---------------------------------------------------------------------
# ОТЛАДОЧНЫЙ ВЫВОД
# ---------------------------------------------------------------------
message(STATUS "🔧 Engine:")
message(STATUS "   Исходников: ${ENGINE_SOURCES}")
message(STATUS "   Тип: $<$<BOOL:${BUILD_SHARED_LIBS}>:динамическая:статическая>")
