# =====================================================================
#  тестовая площадка
# =====================================================================
project(Testbed)

# ---------------------------------------------------------------------
# ФАЙЛЫ ИСХОДНОГО КОДА
# ---------------------------------------------------------------------
# И ДЕЛАЕМ ИЗ ЭТОГО ВСЕГО ЧТО? - ИСПОЛНЯЕМЫЙ ФАЙЛ
# ---------------------------------------------------------------------

file(GLOB_RECURSE TESTBED_SOURCES
    "src/*.cpp"
)

add_executable(${PROJECT_NAME}
   ${TESTBED_SOURCES}
)

# ---------------------------------------------------------------------
# ПОДКЛЮЧАЕМ ЗАВИСИМОСТИ(ЛИНКОВКА)(ТУТ -  ТОЛЬКО К ДВИЖКУ)
# ---------------------------------------------------------------------

target_link_libraries(${PROJECT_NAME}
   PRIVATE
      Engine
)

# ---------------------------------------------------------------------
# НАСТРОЙКИ КОМПИЛЯЦИИ
# ---------------------------------------------------------------------

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)

# ---------------------------------------------------------------------
# ОТЛАДОЧНЫЙ ВЫВОД
# ---------------------------------------------------------------------
message(STATUS "🕹️ Testbed:")
message(STATUS "   Исходников: ${TESTBED_SOURCES}")
